@@ -1,6 +1,9 @@
 Version 1.12.2+dev:
  * Language and i18n:
    * Updated translations:
+ * Miscellaneous and bug fixes:
+   * Fixed bug #23445: set default build type in cmake to "Release" to ensure
+     that the game is not unoptimized
 
 Version 1.12.2:
  * Security fixes:
